ページレイアウト作成

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>react sample</title>
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>react sample</title>
+</head>
+<body>
+<div class="content-wrapper">
+    <div id="header" class="header"></div>
+    <div id="content" class="content"></div>
+    <div id="footer" class="footer"></div>
+</div>
+</body>
 </html>
