--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <div class="content-wrapper">
     <div id="header" class="header"></div>
+    <div id="test"></div>
     <div id="content" class="content"></div>
     <div id="footer" class="footer"></div>
 </div>
