--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="header" class="header"></div>
     <div id="test"></div>
     <div id="content" class="content"></div>
+    <div id="sel"></div>
     <div id="footer" class="footer"></div>
 </div>
 </body>
